# api/api.yaml
@@ -24,6 +24,21 @@ paths:
           required: false
           schema:
             type: string
+        - name: id
+          in: query
+          required: false
+          schema:
+            type: number
+        - name: quantity
+          in: query
+          required: false
+          schema:
+            type: string
+        - name: serial
+          in: query
+          required: false
+          schema:
+            type: string
       responses:
         '200':
           description: OK
